<resources>
    <string name="app_name">Assignment3</string>
    <string name="password_vault">PASSWORD VAULT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="types">Types</string>
    <string name="card">Card</string>
    <string name="folders">Folders</string>
    <string name="no_folders">No Folders</string>
    <string name="bin">Bin</string>
    <string name="items">Items</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="edit_item">Edit item</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="item_information">Item information</string>
    <string name="no_credentials_in_bin">No credentials in bin</string>
</resources>