<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
    android:background="@color/black"
    android:padding="17dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_item"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"/>

    <TextView
        android:textSize="15sp"
        android:text="@string/delete"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/btEditSave"
        android:id="@+id/btEditDelete"
        android:padding="5dp"
        android:background="@color/red"/>

        <TextView
            android:textSize="15sp"
            android:text="@string/save"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/toolbarmore"
            android:id="@+id/btEditSave"/>

        <ImageView
        android:layout_width="20dp"
        android:layout_height="35dp"
        android:id="@+id/toolbarmore"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_more"/>
</RelativeLayout>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/item_information"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/lightergrey"
        android:layout_margin="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:id="@+id/etEditUsername"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/lightergrey"
        android:layout_margin="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:id="@+id/etEditPassword"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/lightergrey"
        android:layout_margin="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_url"
            android:id="@+id/etEditURL"
            android:inputType="textUri"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>