<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/grey"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">
    <include layout="@layout/simpletoolbar"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/types"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/tvlogin"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_add" />
<!--    fix the icon thing-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_add" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Identity"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_add" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Secure note"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_add" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/folders"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_folders"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_add" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/bin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bin"
        android:id="@+id/tvHomeBin"
        android:textSize="20sp"
        android:padding="15dp"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/ic_add" />
</LinearLayout>